--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
       <meta property="twitter:title" content="Selvage AI 코드 리뷰 CLI 도구" />
       <meta property="twitter:description" content="AI 기반 코드 리뷰 자동화 도구로 개발 생산성을 향상시키세요" />
       <meta property="twitter:image" content="https://selvage.ai/og-image.png" />
+
+      <!-- Google tag (gtag.js) -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-LJ06DCYG71"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-LJ06DCYG71');
+      </script>
     </head>
 
     <body>
